python-apt (0.6.21) unstable; urgency=low

  * apt/cdrom.py:
    - better cdrom handling support
  * apt/package.py:
    - added candidateDependencies, installedDependencies
    - SizeToString supports PyLong too 
  * apt/cache.py:
    - fix rootdir

 --

python-apt (0.6.20) unstable; urgency=low

  * python/generic.h:
    - fix incorrect use of PyMem_DEL(), use pyObject_DEL()
      instead. This fixes a nasty segfault with python2.5
      (lp: 63226)
  * python/pkgrecords.cc:
    - export SHA1Hash() as well
  * debian/rules: Remove dh_python call.
  * apt/progress.cc:
    - protect against not-parsable strings send from dpkg (lp: 68553)
  * python/pkgmanager.cc:
    - fix typo (closes: #382853)
  * debian/control:
    - tightend dependency (closes: #383478)
  * apt/progress.py:
    - use os._exit() in the child (lp: #53298)
    - use select() when checking for statusfd (lp: #53282)
  * acknoledge NMU (closes: #378048, #373512)
  * python/apt_pkgmodule.cc:
    - fix missing docstring (closes: #368907), 
      Thanks to Josh Triplett
  * make it build against python2.5
  * python/progress.cc:
    - fix memleak (lp: #43096)

 -- Michael Vogt <mvo@debian.org>  Tue, 19 Dec 2006 13:32:11 +0100

python-apt (0.6.19) unstable; urgency=low

  [ Michael Vogt ]
  * doc/examples/print_uris.py:
    - added a example to show how the indexfile.ArchiveURI() can be used
      with binary packages
  * python/apt_pkgmodule.cc:
    - export sha256 generation

  [ Otavio Salvador ]
  * apt/cache.py:
    - fix commit doc string to also cite the open related callbacks
    - allow change of rootdir for APT database loading
    - add dh_installexamples in package building Closes: #376014

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 26 Jul 2006 18:51:56 +0200

python-apt (0.6.18-0.2) unstable; urgency=low

  * Non-maintainer upload.
  * Add ${shlibs:Depends} and ${misc:Depends} (Closes: #377615).

 -- Christoph Berg <myon@debian.org>  Tue, 18 Jul 2006 11:39:52 +0200
